# elasticity

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Ca2Pb.py  CsNiF3.py  HfV2Ga4.py  LICENSE  NiTe2-3d.py  NiTe2-defs.py  NiTe2.py  README.md  ZrV2Ga4.py  api_materials_project.py  cp_data_erros.xlsx  elasticity.py  elasticity_helper.py  example_diamond.py  exemplo-mayavi.py  exemplo-plotly.py  exemplo-vtk.py  gelo.py  ipython.html  plots3d.py  pyproject.toml  test_diamond_example.py  test_silicon_example.py  thermal_expansion.py  thermal_expansionv2.py  units_conversion.py
.github/workflows/: main.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
elasticity/: CONTRIBUTING.md  LICENSE
examples/: Ca2Pb.py  plots3d.py
examples/Thermal/: cp_data_birch_diamond.txt  cp_data_birch_silicon.txt  cp_data_murnaghan_diamond.txt  cp_data_murnaghan_silicon.txt  data_birch_diamond.txt  data_murnaghan_silicon.txt
material-examples/: Ca2Pb.py  gelo.py
plot-libs-examples/: exemplo-mayavi-phong.py  plots3d.py
src/ElasticityProject/: __init__.py  elasticity.py  plots3d.py
src/elasticity/: __init__.py  elasticity.py  plots3d.py
src/elasticityproject/: __init__.py  elasticityproject.py  plots2d.py
tests/: test_elasticity.py  test_elasticityproject.py
