[tool.poetry]
name = "elasticity"
version = "0.1.0"
description = "A collection of classes and routines to help the treatment and presentation of single and polycrystal elastic properties"
authors = ["EEL-USP-Elasticity Group"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
