[tool.poetry]
name = "elasticityproject"
version = "0.1.1.4"
description = "A collection of classes and routines to help the treatment and presentation of single and polycrystal elastic properties"
authors = ["EELElasticityGroup"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.3"
vtk = "^9.2.6"
mayavi = "^4.8.1"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
